# CVM

./: .gitignore  README.md
CVM_Old/Distinct_Elems/: Distinct_Elems_Algo.thy  Distinct_Elems_Codegen.thy
CVM_Old/Distinct_Elems_While/: Distinct_Elems_While_Algo.thy
CVM_Old/Utils/: Utils_Basic.thy  Utils_List.thy
archive/cvm_unbiased/: build.sh
cvm_unbiased/: build.sh  main.aux  main.bbl  main.bib  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex
cvm_unbiased/counter_example/: counter_example.cabal
isabelle/: Algo.thy  CVM.thy  Distinct_Elems_Algo.thy  Distinct_Elems_Analysis.thy  Distinct_Elems_Binomial.thy  Distinct_Elems_Codegen.thy  Distinct_Elems_Correctness.thy  Distinct_Elems_Correctness_Example.thy  Distinct_Elems_Correctness_Usage.thy  Distinct_Elems_Eager.thy  Distinct_Elems_Lazy.thy  Distinct_Elems_No_Fail.thy  Distinct_Elems_Nondet.thy  Distinct_Elems_While.thy  Params.thy  README.md  ROOT  ROOTS  StatesTraces.thy  build.sh  edit.sh
isabelle/Algo/: Algo.thy  Algo_Basic.thy  Algo_Final.thy  Algo_Main.thy  Algo_Params.thy  Algo_Params_old.thy  Algo_Properties.thy  Algo_Properties.thy~  Algo_StatesTraces.thy  Params.thy  StatesTraces.thy
isabelle/Algo_Transforms/: Algo_Transforms_Binomial.thy  Algo_Transforms_Eager.thy  Algo_Transforms_Lazy.thy  Algo_Transforms_No_Fail.thy  Algo_Transforms_Nondet.thy
isabelle/Basic/: Basic_Algo.thy  Basic_Experiments.thy  Basic_Props.thy
isabelle/CVM_Invariant/: CVM_Original_Algorithm.thy  (+2 more)
paper/: main.bib  main.tex
presentation/: algorithm_animation.tex  main.bib  main.tex
tools/: count_lines.py
(+235 files in other folders)
